# wgpu_shader_boilerplate

./: Cargo.toml  README.md
examples/: compute.wgsl  example.rs
src/: lib.rs
